# VaultBot

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  INCIDENT_RESPONSE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  channels.md  cli-reference.md  getting-started.md  plugins.md  security.md
examples/plugins/calculator/: plugin.py  zenbot_plugin.json
examples/plugins/weather/: plugin.py  zenbot_plugin.json
src/vaultbot/: __init__.py  __main__.py  cli.py  config.py  daemon.py  observability.py  pairing.py  setup.py  tui.py
src/vaultbot/acp/: __init__.py  bindings.py  manager.py  policy.py  provenance.py  session.py  task_executor.py
src/vaultbot/agents/: __init__.py  auth_profiles.py  coding_agent.py  model_switcher.py  orchestrator.py  subagent.py
src/vaultbot/backup/: __init__.py  manager.py
src/vaultbot/bootstrap/: __init__.py  startup.py
src/vaultbot/canvas/: __init__.py  server.py
src/vaultbot/cli_commands/: agent_cmds.py  backup_cmds.py  channel_cmds.py  completion.py  config_cmds.py  cron_cmds.py  doctor.py  gateway_cmds.py  model_cmds.py  plugin_cmds.py  secret_cmds.py  security_cmds.py  status_cmds.py
src/vaultbot/config/: __init__.py  env_substitution.py  hot_reload.py  migration.py
src/vaultbot/core/: agent_runner.py  auto_reply.py  block_streaming.py  bot.py  broadcast.py  command_registry.py  compaction.py  context.py  context_engine.py  debounce.py  directives.py  healthcheck.py  interactive.py  labels.py  message.py  presence.py  reactions.py  reply_pipeline.py  route_resolver.py  router.py  send_policy.py  session.py  session_events.py  session_store.py  summarizer.py  task_engine.py  task_registry.py  thread.py  transcript.py  usage_tracker.py  window_manager.py
src/vaultbot/cron/: __init__.py  delivery_plan.py  isolated_runner.py  job_store.py  scheduler.py
src/vaultbot/daemon/: __init__.py  service.py
src/vaultbot/dashboard/: __init__.py  api.py  metrics.py  server.py  web_ui.py
src/vaultbot/deploy/: __init__.py  fly_io.py  nix.py  podman.py
src/vaultbot/execution/: __init__.py  node_host.py
src/vaultbot/gateway/: __init__.py  auth.py  control_plane.py  event_bus.py  network.py  node_manager.py  openai_compat.py  protocol.py  rpc_router.py  session_gateway.py  websocket_server.py
src/vaultbot/hooks/: __init__.py  engine.py  registry.py
src/vaultbot/i18n/: __init__.py  detection.py  locale_manager.py  translator.py
src/vaultbot/infra/: approval.py  archive.py  cache.py  diagnostics.py
src/vaultbot/integrations/: device_control.py  email_client.py  github_client.py  gmail.py  phone.py
src/vaultbot/llm/: base.py  cache.py  catalog.py  claude.py  compatible.py  deepseek.py  factory.py  fallback.py  gemini.py  litellm_proxy.py  local.py  qwen.py  (+5 more)
src/zenbot/: __init__.py  __main__.py  cli.py  config.py
tests/integration/: test_e2e.py  test_e2e_additional_platforms.py  test_e2e_fallback.py  test_e2e_image_generation.py  test_e2e_irc.py  test_e2e_llm_providers.py  test_e2e_matrix.py  test_e2e_mattermost.py  test_e2e_phase4.py  test_e2e_phase5.py  test_e2e_tts.py
tests/unit/: test_acp.py  test_additional_platforms.py  test_advanced_memory.py  test_agent_orchestration.py  test_agent_runner.py  test_agents_deep.py  test_asian_llm.py  test_audit_scanner.py  test_auth.py  test_auto_reply_advanced.py  test_backup.py  test_block_streaming.py  test_bootstrap.py  test_broadcast.py  test_browser.py  test_calculator_plugin.py  test_canvas_node.py  test_channel_plugins.py  test_channels_deep.py  test_cli_comprehensive.py  test_cli_deep.py  test_cli_expansion.py  test_coding_agent.py  test_compaction.py  test_config_advanced.py  test_config_deep.py  test_config_validation.py  test_context.py  test_context_engine.py  test_context_engine_advanced.py  test_conversation_labels.py  test_credential_store.py  test_cron.py  test_cron_advanced.py  test_daemon.py  test_daemon_service.py  test_dashboard.py  test_debounce.py  test_deployment.py  test_device_control.py  (+93 more)
(+178 files in other folders)
