[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vaultbot"
version = "0.1.0"
description = "V.A.U.L.T. BOT — Security-first, open-source autonomous AI agent"
readme = "README.md"
license = "LicenseRef-BSL-1.1"
requires-python = ">=3.11"
authors = [
    { name = "Khaled Md Tuhidul Hossain" },
]
keywords = ["ai", "bot", "agent", "telegram", "discord", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Security",
]
dependencies = [
    "aiosqlite>=0.20",
    "anthropic>=0.40",
    "argon2-cffi>=23.1",
    "cryptography>=43.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "nextcord>=2.6",
    "openai>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-telegram-bot[webhooks]>=22.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "typer>=0.12",
]

[project.optional-dependencies]
redis = [
    "redis[hiredis]>=5.0",
]
dev = [
    "mypy>=1.11",
    "pip-audit>=2.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
vaultbot = "vaultbot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vaultbot"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]
ignore = [
    "S101",  # Allow assert in tests
    "S104",  # Allow binding to all interfaces (server code)
    "S110",  # Allow try-except-pass (cleanup handlers)
    "B008",  # Allow function calls in argument defaults (typer pattern)
    "B027",  # Allow empty methods in ABCs without @abstractmethod (lifecycle hooks)
    "S105",  # Allow hardcoded password strings (test fixtures, default args)
    "S106",  # Allow hardcoded password arguments (test fixtures)
    "UP042", # Allow str, Enum pattern (StrEnum requires 3.11 but str+Enum is clearer)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
